--- a/voting-frontend/package.json
+++ b/voting-frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env TURBOPACK=0 next build",
+    "build": "cross-env NEXT_PRIVATE_DISABLE_TURBOPACK=1 next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -12,7 +12,7 @@
     "@stacks/connect": "^8.2.3",
     "@stacks/network": "^7.2.0",
     "@stacks/transactions": "^7.3.0",
-    "next": "16.0.10",
+    "next": "^15.5.9",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
@@ -23,7 +23,7 @@
     "@types/react-dom": "^19",
     "cross-env": "^10.1.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
+    "eslint-config-next": "^15.5.9",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
